--- a/src/css/common/_fonts.scss
+++ b/src/css/common/_fonts.scss
@@ -5,3 +5,59 @@
   font-display: swap;
   src:  url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff");
 }
+
+@font-face {
+  font-family: "Inter";
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  src:  url("../fonts/Inter-Light.woff2") format("woff2"), url("../fonts/Inter-Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src:  url("../fonts/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src:  url("../fonts/Inter-Medium.woff2") format("woff2"), url("../fonts/Inter-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src:  url("../fonts/Inter-Bold.woff2") format("woff2"), url("../fonts/Inter-Bold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+  src:  url("../fonts/Inter-Black.woff2") format("woff2"), url("../fonts/Inter-Black.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Philosopher";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src:  url("../fonts/Philosopher-Regular.woff2") format("woff2"), url("../fonts/Philosopher-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Philosopher";
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src:  url("../fonts/Philosopher-Bold.woff2") format("woff2"), url("../fonts/Philosopher-Bold.woff") format("woff");
+}
