--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,4 +2,9 @@ extends ../common/layout
 
 block main
   main
-    include ../includes/index/block
+    include ../includes/index/banner
+    include ../includes/index/about
+    include ../includes/index/original
+    include ../includes/index/how
+    include ../includes/index/motivation
+    include ../includes/index/map
